--- a/public/templates/login.html
+++ b/public/templates/login.html
@@ -1,16 +1,44 @@
-<section>
-  <form novalidate ng-submit="login.submit()">
-    <div class="row">
-      <label>Email</label>
-      <input class="u-full-width" type="email" placeholder="Email" ng-model="login.credentials.email">
-    </div>
-    <div class="row">
-      <label>Password</label>
-      <input class="u-full-width" type="password" placeholder="Password" ng-model="login.credentials.password">
-    </div>
+<div class="signInContainer">
+  <div class="formContainer">
+    <toggle is-active="login.isActive"></toggle>
+    <!-- LOGIN FORM -->
+    <form ng-controller="LoginController as login" class="loginForm" ng-if="!login.isActive" novalidate ng-submit="login.submit()">
+      <div class="row">
+        <label>Email</label>
+        <input class="u-full-width" type="email" placeholder="Email" ng-model="login.credentials.email">
+      </div>
+      <div class="row">
+        <label>Password</label>
+        <input class="u-full-width" type="password" placeholder="Password" ng-model="login.credentials.password">
+      </div>
+      <button>Login</button>
+    </form>
 
-    <button>Login</button>
-  </form>
+    <!-- REGISTER FORM -->
+    <form ng-controller="RegisterController as register" class="registerForm" ng-if="login.isActive" novalidate ng-submit="register.submit()">
+      <div class="row">
+        <label>First Name</label>
+        <input class="u-full-width" type="text" placeholder="First Name" ng-model="register.user.firstName">
+      </div>
+      <div class="row">
+        <label>Last Name</label>
+        <input class="u-full-width" type="text" placeholder="Last Name" ng-model="register.user.lastName">
+      </div>
+      <div class="row">
+        <label>Email</label>
+        <input class="u-full-width" type="email" placeholder="Email" ng-model="register.user.email">
+      </div>
+      <div class="row">
+        <label>Password</label>
+        <input class="u-full-width" type="password" placeholder="Password" ng-model="register.user.password">
+      </div>
+      <div class="row">
+        <label>Password Confirmation</label>
+        <input class="u-full-width" type="password" placeholder="Password Confirmation" ng-model="register.user.passwordConfirmation">
+      </div>
+      <button>Register</button>
+    </form>
 
-  <!-- <button ng-click="login.authenticate('facebook')">Login with Facebook</button> -->
-</section>
+    <!-- <button ng-click="login.authenticate('facebook')">Login with Facebook</button> -->
+  </div>
+</div>
