--- a/public/templates/login.html
+++ b/public/templates/login.html
@@ -39,6 +39,6 @@
       <button>Register</button>
     </form>
 
-    <!-- <button ng-click="login.authenticate('facebook')">Login with Facebook</button> -->
+    <button ng-click="login.authenticate('facebook')">Login with Facebook</button>
   </div>
 </div>
