--- a/src/templates/cardContainer.html
+++ b/src/templates/cardContainer.html
@@ -1,14 +1,12 @@
 <section class="card-container">
-  <div class="card">
+  <div ng-repeat="post in mainFeed.all" class="card">
     <div class="card-block">
-      <h4 class="card-title">Card title</h4>
-      <h6 class="card-subtitle text-muted">Support card subtitle</h6>
+      <h4 class="card-title">{{ post.title }}</h4>
+      <h6 class="card-subtitle text-muted">{{ post.user.firstName }}</h6>
     </div>
-    <img src="" alt="Card image">
+    <img src="{{ post.image }}" alt="Card image">
     <div class="card-block">
-      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-      <a href="#" class="card-link">Card link</a>
-      <a href="#" class="card-link">Another link</a>
+      <p class="card-text">{{ post.bodyText }}</p>
     </div>
   </div>
 </section>
