--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -39,7 +39,9 @@ body {
         @include justify-content(space-between);
         @include align-items(center);
         @include flex-direction(row);
-        width: 40%;
+        .icon, .profilePic {
+          margin: 0 20px;
+        }
         .signIn{
           border: 1px solid $main-teal;
           border-radius: $border-radius-pill;
@@ -50,6 +52,19 @@ body {
           &:hover{
             color: white;
             background-color: $main-teal;
+          }
+        }
+        .profilePic{
+          border-radius: 50%;
+          height: 50px;
+          width: 50px;
+          overflow: hidden;
+          @include display(flex);
+          @include justify-content(center);
+          @include align-items(center);
+          cursor: pointer;
+          img{
+            max-height: 60px;
           }
         }
       }
