--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -19,63 +19,99 @@ body {
     }
   }
 
-  header{
-    background: white;
-    width: 100%;
-    height: 80px;
-    margin: 0;
-    padding: 0 25px;
+  header {
     position: fixed;
     top:0;
-    box-shadow: 0 2px 2px -2px $text-black;
     @include display(flex);
-    @include justify-content(space-between);
-    @include align-items(center);
-    @include flex-direction(row);
-    z-index: 10;
-    div{
-      &:nth-child(2){
-        @include display(flex);
-        @include justify-content(space-between);
-        @include align-items(center);
-        @include flex-direction(row);
-        .icon, .profilePic {
-          margin: 0 20px;
-        }
-        .searchResults{
-          position: absolute;
-          top: 80px;
-          right: 0;
-          .result{
-            width: 200px;
-            background: white;
-            height: 50px;
-            border-bottom: 1px solid black; 
-          }
-        }
-        .signIn{
-          border: 1px solid $main-teal;
-          border-radius: $border-radius-pill;
-          padding: 5px 10px;
-          cursor: pointer;
-          color: $main-teal;
-          @include transition(all 200ms ease-in-out);
-          &:hover{
-            color: white;
-            background-color: $main-teal;
-          }
-        }
-        .profilePic{
-          border-radius: 50%;
-          height: 50px;
-          width: 50px;
-          overflow: hidden;
+    @include flex-direction(column);
+    .searchContainer {
+      input{
+        width: 230px;
+        height: 60px;
+        padding: 10px;
+
+      }
+      width: 230px;
+      background-color: #fff;
+      border: none;
+      position: relative;
+      box-shadow: 0 0px 2px 0px $text-black;
+      right: -50%;
+      .searchResults{
+        position: relative;;
+        top: 0;
+        right: 0;
+
+        .result{
+          width: 230px;
+          background: white;
+          height: 60px;
+          border-top: 1px solid grey;
+          line-height: 60px;
+          text-align: center;
           @include display(flex);
-          @include justify-content(center);
+          .profilePic{
+            margin: auto 20px;
+            border-radius: 50%;
+            height: 50px;
+            width: 50px;
+            overflow: hidden;
+            @include display(flex);
+            @include justify-content(center);
+            @include align-items(center);
+            cursor: pointer;
+            img{
+              max-height: 60px;
+            }
+          }
+        }
+      }
+    }
+    .mainHeader{
+      background: white;
+      width: 100vw;
+      height: 80px;
+      margin: 0;
+      padding: 0 25px;
+      box-shadow: 0 2px 2px -2px $text-black;
+      @include display(flex);
+      @include justify-content(space-between);
+      @include align-items(center);
+      @include flex-direction(row);
+      z-index: 10;
+      div{
+        &:nth-child(2){
+          @include display(flex);
+          @include justify-content(space-between);
           @include align-items(center);
-          cursor: pointer;
-          img{
-            max-height: 60px;
+          @include flex-direction(row);
+          .icon, .profilePic {
+            margin: 0 20px;
+          }
+          .signIn{
+            border: 1px solid $main-teal;
+            border-radius: $border-radius-pill;
+            padding: 5px 10px;
+            cursor: pointer;
+            color: $main-teal;
+            @include transition(all 200ms ease-in-out);
+            &:hover{
+              color: white;
+              background-color: $main-teal;
+            }
+          }
+          .profilePic{
+            border-radius: 50%;
+            height: 50px;
+            width: 50px;
+            overflow: hidden;
+            @include display(flex);
+            @include justify-content(center);
+            @include align-items(center);
+            cursor: pointer;
+            img{
+              max-height: 60px;
+            }
           }
         }
       }
