instagram oauth done, parallax in progress

--- a/public/templates/login.html
+++ b/public/templates/login.html
@@ -40,5 +40,6 @@
     </form>
 
     <button ng-click="login.authenticate('facebook')">Login with Facebook</button>
+    <button ng-click="login.authenticate('instagram')">Login with Instagram</button>
   </div>
 </div>
