--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -50,7 +50,7 @@ body {
             width: 200px;
             background: white;
             height: 50px;
-            border-bottom: 1px solid black; 
+            border-bottom: 1px solid black;
           }
         }
         .signIn{
@@ -81,7 +81,39 @@ body {
       }
     }
   }
+  nav{
+    position: fixed;
+    top: 80px;
+    right: 0;
+    width: 135px;
+    background: white;
+    z-index: 99;
+    ul{
+      list-style: none;
+      width: 100%;
+      padding: 0;
+      margin: 0;
+      li{
+        width: 100%;
+        height: 50px;
+        line-height: 50px;
+        border-top: 1px solid grey;
+        text-align: center;
+        a{
+          text-decoration: none;
+          &:hover{
+            text-decoration: none;
+            color: red;
+          }
+        }
+        &:hover{
+          color: red;
+        }
+      }
+    }
+  }
   main{
+    padding-top: 20px;
     margin-top: 80px;
     height: 200vh;
     .card-container{
@@ -132,6 +164,61 @@ body {
         right: 0px;
         &.active{
           right: -150px;
+        }
+      }
+    }
+    .profileContainer{
+      @include display(flex);
+      @include justify-content(center);
+      @include flex-direction(column);
+      @include align-items(center);
+      .userSection{
+        @include display(flex);
+        @include justify-content(center);
+        @include align-items(flex-start);
+        @include flex-direction(column);
+        width: 600px;
+        background: white;
+        height: 150px;
+        border-radius: 7px;
+        box-shadow: 0px 0px 1px $text-black;
+        font-weight: lighter;
+        .userDetails{
+          @include display(flex);
+          @include flex-direction(row);
+          .textContainer{
+            p{
+              margin: 0;
+              &:first-child{
+                color: $main-teal;
+              }
+            }
+          }
+          .profilePic{
+            border-radius: 50%;
+            height: 50px;
+            width: 50px;
+            overflow: hidden;
+            @include display(flex);
+            @include justify-content(center);
+            @include align-items(center);
+            cursor: pointer;
+            margin: 0 20px;
+            img{
+              max-height: 60px;
+            }
+          }
+          div{
+
+          }
+        }
+        .socialDetails{
+
+        }
+      }
+      .contentSection{
+        .feedSection{
+
         }
       }
     }
