--- a/src/templates/toggle.html
+++ b/src/templates/toggle.html
@@ -1,7 +1,7 @@
 <div class="toggle-container">
   <div class="full" ng-class="{ active: isActive }">
-    <span><a>Login</a></span>
-    <span><a>Register</a></span>
+    <span><a>{{ firstValue }}</a></span>
+    <span><a>{{ secondValue }}</a></span>
   </div>
   <div class="toggle" ng-class="{ active: isActive }"></div>
 </div>
