--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -42,7 +42,6 @@ body {
         position: relative;;
         top: 0;
         right: 0;
-
         .result{
           width: 230px;
           background: white;
@@ -55,17 +54,15 @@ body {
             margin: auto 20px;
             border-radius: 50%;
             height: 50px;
-
-            // width: 50px;
-            // overflow: hidden;
-            // @include display(flex);
-            // @include justify-content(center);
-            // @include align-items(center);
-            // cursor: pointer;
-            // img{
-            //   max-height: 60px;
-            // }
-
+            width: 50px;
+            overflow: hidden;
+            @include display(flex);
+            @include justify-content(center);
+            @include align-items(center);
+            cursor: pointer;
+            img{
+              max-height: 60px;
+            }
             border-bottom: 1px solid black;
           }
         }
