Fixed some errors and got user show params working

--- a/public/templates/card.html
+++ b/public/templates/card.html
@@ -3,7 +3,7 @@
     <h4 class="card-title">{{ post.title }}</h4>
     <h6 class="card-subtitle text-muted">{{ post.user.firstName }}</h6>
   </div>
-  <img src="{{ post.image }}" alt="Card image">
+  <img ng-src="{{ post.image }}" alt="Card image">
   <div class="card-block">
     <p class="card-text">{{ post.bodyText }}</p>
   </div>
