--- a/public/templates/home.html
+++ b/public/templates/home.html
@@ -1,35 +1,35 @@
   <div class="parallax">
     <div id="group1" class="parallax__group">
       <div class="parallax__layer parallax__layer--base" style="background-image:url('https://www.crowdform.co.uk/wp-content/uploads/2016/04/tibor-hero-1-1440x900.jpg')">
-        <div class="title">Base Layer</div>
+        <div class="title">HOME</div>
       </div>
     </div>
     <div id="group2" class="parallax__group">
       <div class="parallax__layer parallax__layer--base">
-        <div class="title">Base Layer</div>
+        <div class="title">All about our wicked app</div>
       </div>
       <div class="parallax__layer parallax__layer--back" style="background-image:url('https://www.crowdform.co.uk/wp-content/uploads/2016/05/anti-hero-1428x900.jpg')">
-        <div class="title">Background Layer</div>
+        <div class="title"></div>
       </div>
     </div>
     <div id="group3" class="parallax__group">
       <div class="parallax__layer parallax__layer--base" style="background-image:url('https://www.crowdform.co.uk/wp-content/uploads/2016/05/crs-hero-1440x900.jpg')">
-        <div class="title">PROBLEM AREA</div>
+        <div class="title">Create a profile here to record your travel pics and diary</div>
       </div>
       <div class="parallax__layer parallax__layer--back">
-        <div class="title">Base Layer</div>
+        <div class="title">Follow other travellers and share your experiences on social</div>
       </div>
     </div>
     <div id="group4" class="parallax__group">
       <div class="parallax__layer parallax__layer--base">
-        <div class="title">Base Layer</div>
+        <div class="title">Testamonial. Shout out to Kiwi for providing a cracking testamonial</div>
       </div>
       <div class="parallax__layer parallax__layer--back" style="background-image:url('https://www.crowdform.co.uk/wp-content/uploads/2016/05/anti-hero-2-1440x900.jpg')">
-        <div class="title">Background Layer</div>
+        <div class="title"></div>
       </div>
     </div>
     <div id="group5" class="parallax__group">
       <div class="parallax__layer parallax__layer--base" style="background-image:url('https://www.crowdform.co.uk/wp-content/uploads/2016/04/tibor-hero-1-1440x900.jpg')">
-        <div class="title">Base Layer</div>
+        <div class="title">Goodbye....</div>
       </div>
     </div>
