--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -50,20 +50,23 @@ body {
           line-height: 60px;
           text-align: center;
           @include display(flex);
-          .profilePic{
-            margin: auto 20px;
-            border-radius: 50%;
-            height: 50px;
-            width: 50px;
-            overflow: hidden;
+          a{
             @include display(flex);
-            @include justify-content(center);
-            @include align-items(center);
-            cursor: pointer;
-            img{
-              max-height: 60px;
+            .profilePic{
+              margin: auto 20px;
+              border-radius: 50%;
+              height: 50px;
+              width: 50px;
+              overflow: hidden;
+              @include display(flex);
+              @include justify-content(center);
+              @include align-items(center);
+              cursor: pointer;
+              img{
+                max-height: 60px;
+              }
+              border-bottom: 1px solid black;
             }
-            border-bottom: 1px solid black;
           }
         }
         .signIn{
