--- a/src/templates/profile.html
+++ b/src/templates/profile.html
@@ -2,12 +2,12 @@
   <div class="userSection">
     <div class="userDetails">
       <div class="profilePic">
-        <img src="{{ main.currentUser.image }}" alt="" />
+        <img src="{{ userShow.user.image }}" alt="" />
       </div>
       <div class="textContainer">
-        <p>{{ main.currentUser.firstName }} {{ main.currentUser.lastName }}</p>
+        <p>{{ userShow.user.firstName }} {{ userShow.user.lastName }}</p>
         <p>
-          {{ main.currentUser.bio }}
+          {{ userShow.user.bio }}
         </p>
       </div>
     </div>
