--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -446,3 +446,9 @@ body {
   bottom: 0;
   right: 0;
 }
+footer {
+  font-size: 16px;
+  color: #119DA4;
+  background-color: #fafafa;
+  padding: 5px;
+}
