--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -33,3 +33,4 @@
         <div class="title">Goodbye....</div>
       </div>
     </div>
+  <footer>&copy; 2016. Website produced by OTN productions Ltd.</footer>
