--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -18,6 +18,14 @@ body {
       transform: scale(1.07);
     }
   }
+  .ta-editor {
+    min-height: 300px;
+    height: auto;
+    overflow: auto;
+    font-family: inherit;
+    font-size: 100%;
+    margin:20px 0;
+  }
 
   header {
     position: fixed;
@@ -140,6 +148,10 @@ body {
     width: 135px;
     background: white;
     z-index: 99;
+    display: none;
+    &.active{
+      display: block;
+    }
     ul{
       list-style: none;
       width: 100%;
@@ -236,33 +248,41 @@ body {
         border-radius: 7px;
         box-shadow: 0px 0px 1px $text-black;
         font-weight: lighter;
-        .userDetails{
+        .userAndControls{
           @include display(flex);
           @include flex-direction(row);
-          .textContainer{
-            p{
-              margin: 0;
-              &:first-child{
-                color: $main-teal;
+          @include justify-content(space-between);
+          @include align-items(center);
+          width: 100%;
+          padding: 20px;
+          .userDetails{
+            @include display(flex);
+            @include flex-direction(row);
+            .textContainer{
+              p{
+                margin: 0;
+                &:first-child{
+                  color: $main-teal;
+                }
               }
             }
-          }
-          .profilePic{
-            border-radius: 50%;
-            height: 50px;
-            width: 50px;
-            overflow: hidden;
-            @include display(flex);
-            @include justify-content(center);
-            @include align-items(center);
-            cursor: pointer;
-            margin: 0 20px;
-            img{
-              max-height: 60px;
+            .profilePic{
+              border-radius: 50%;
+              height: 50px;
+              width: 50px;
+              overflow: hidden;
+              @include display(flex);
+              @include justify-content(center);
+              @include align-items(center);
+              cursor: pointer;
+              margin-right: 20px;
+              img{
+                max-height: 60px;
+              }
             }
-          }
-          div{
+            div{
 
+            }
           }
         }
         .socialDetails{
