--- a/src/templates/card.html
+++ b/src/templates/card.html
@@ -5,6 +5,8 @@
   </div>
   <img ng-src="{{ post.image }}" alt="Card image">
   <div class="card-block">
-    <p class="card-text">{{ post.bodyText }}</p>
+    <div ng-bind-html="deliberatelyTrustDangerousSnippet()" class="card-text">
+      {{ post.bodyText }}
+    </div>
   </div>
 </div>
