--- a/src/templates/profile.html
+++ b/src/templates/profile.html
@@ -19,14 +19,20 @@
       </div>
     </div>
     <div class="socialDetails">
+      {{ userShow.user.following.length }} {{ userShow.followers.length }}
     </div>
   </div>
   <toggle is-active="login.isActive" first-value="Feed" second-value="Map"></toggle>
   <create-post></create-post>
   <div class="contentSection">
     <div ng-controller="ProfileFeedController as profileFeed" class="feedSection card-container">
-      <div ng-repeat="post in profileFeed.all" class="card">
+      <div ng-if="!login.isActive" ng-repeat="post in profileFeed.all" class="card feedView">
         <card></card>
+      </div>
+      <div ng-if="login.isActive" class="mapView">
+        <section>
+          <google-map></google-map>
+        </section>
       </div>
     </div>
   </div>
