--- a/public/templates/profile.html
+++ b/public/templates/profile.html
@@ -34,7 +34,7 @@
       </div>
       <div ng-if="login.isActive" class="mapView">
         <section>
-          <google-map></google-map>
+          <google-map posts="profileFeed.feed"></google-map>
         </section>
       </div>
     </div>
