--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -26,6 +26,16 @@ body {
     font-size: 100%;
     margin:20px 0;
   }
+  .dragDrop{
+    height: 300px;
+    background: white;
+    img{
+      height: 100%;
+    }
+    &.active{
+      background-color: #ddd;
+    }
+  }
 
   header {
     position: fixed;
