--- a/src/templates/card.html
+++ b/src/templates/card.html
@@ -5,8 +5,7 @@
   </div>
   <img ng-src="{{ post.image }}" alt="Card image">
   <div class="card-block">
-    <div ng-bind-html="deliberatelyTrustDangerousSnippet()" class="card-text">
-      {{ post.bodyText }}
+    <div ng-bind-html="post.bodyText" class="card-text">
     </div>
   </div>
 </div>
