--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -200,7 +200,13 @@ body {
         img{
           max-width: 100%;
         }
+        p{
+          font-family: cordalight, serif;
+        }
       }
+    }
+    .bodyTextInputBox{
+      font-family: cordalight, serif;
     }
     .toggle-container{
       height: 50px;
