--- a/src/scss/_fonts.scss
+++ b/src/scss/_fonts.scss
@@ -40,3 +40,15 @@
     font-style: normal;
 
 }
+
+
+@font-face {
+    font-family: 'cordalight';
+    src: url('../assets/fonts/cordalig-webfont.woff2') format('woff2'),
+         url('../assets/fonts/cordalig-webfont.woff') format('woff'),
+         url('../assets/fonts/cordalig-webfont.ttf') format('truetype'),
+         url('../assets/fonts/cordalig-webfont.svg#cordalight') format('svg');
+    font-weight: normal;
+    font-style: normal;
+
+}
