--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -491,3 +491,10 @@ footer {
   background-color: #fafafa;
   padding: 5px;
 }
+.infoWindowImg {
+  width: 25vh;
+  height: auto;
+  padding: 10px;
+  text-align: center;
+
+}
