--- a/src/templates/feed.html
+++ b/src/templates/feed.html
@@ -2,6 +2,8 @@
 <div ng-controller="MainFeedController as mainFeed" class="feedSection card-container">
   <div class="card-container">
     <div ng-repeat="post in mainFeed.all" class="card">
+
+      </div>
       <card></card>
     </div>
   </div>
