--- a/public/templates/feed.html
+++ b/public/templates/feed.html
@@ -1,9 +1,7 @@
 <create-post></create-post>
-<div ng-controller="MainFeedController as mainFeed" class="feedSection card-container">
+<div class="feedSection card-container">
   <div class="card-container">
     <div ng-repeat="post in mainFeed.all" class="card">
-
-      </div>
       <card></card>
     </div>
   </div>
