--- a/src/templates/show.html
+++ b/src/templates/show.html
@@ -1,3 +1,3 @@
 <h1>SHOWING POST</h1>
-<h1>{{ user.post.title }}</h1>
-<p>{{ user.post.bodyText }}</p>
+<h1>{{ showPost.post.title }}</h1>
+<p>{{ userPost.post.bodyText }}</p>
