--- a/public/templates/card.html
+++ b/public/templates/card.html
@@ -13,7 +13,7 @@
       {{ post.likes.length || 0 }}
     </div>
     <div>
-      {{ post.commments.length || 0 }} Comments
+      {{ post.comments.length || 0 }} Comments
     </div>
   </div>
 </div>
