--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -1,6 +1,6 @@
 <div class="parallax">
     <div id="group1" class="parallax__group">
-      <div class="parallax__layer parallax__layer--base" style="background-image:url('https://www.crowdform.co.uk/wp-content/uploads/2016/04/tibor-hero-1-1440x900.jpg')">
+      <div class="parallax__layer parallax__layer--base" style="background-image:url('../assets/images/inlelakefisherman.jpg')">
         <div class="title">HOME</div>
       </div>
     </div>
@@ -8,12 +8,12 @@
       <div class="parallax__layer parallax__layer--base">
         <div class="title">Tindubertagram combines a personal travel blog with the chance to connect with other travellers via social media. Share and record your pictures and blog about your travels and follow other travellers to get and share information.</div>
       </div>
-      <div class="parallax__layer parallax__layer--back" style="background-image:url('https://www.crowdform.co.uk/wp-content/uploads/2016/05/anti-hero-1428x900.jpg')">
+      <div class="parallax__layer parallax__layer--back" style="background-image:url('../assets/images/mountain.jpg')">
         <div class="title"></div>
       </div>
     </div>
     <div id="group3" class="parallax__group">
-      <div class="parallax__layer parallax__layer--base" style="background-image:url('https://www.crowdform.co.uk/wp-content/uploads/2016/05/crs-hero-1440x900.jpg')">
+      <div class="parallax__layer parallax__layer--base" style="background-image:url('../assets/images/Ethiopia.jpg')">
         <div class="title">Create your own profile to share your photos and stories</div>
       </div>
       <div class="parallax__layer parallax__layer--back">
@@ -24,12 +24,12 @@
       <div class="parallax__layer parallax__layer--base">
         <div class="title">Testamonial. Shout out to Kiwi for providing a cracking testamonial</div>
       </div>
-      <div class="parallax__layer parallax__layer--back" style="background-image:url('https://www.crowdform.co.uk/wp-content/uploads/2016/05/anti-hero-2-1440x900.jpg')">
+      <div class="parallax__layer parallax__layer--back" style="background-image:url('../assets/images/eagle.jpg')">
         <div class="title"></div>
       </div>
     </div>
     <div id="group5" class="parallax__group">
-      <div class="parallax__layer parallax__layer--base" style="background-image:url('https://www.crowdform.co.uk/wp-content/uploads/2016/04/tibor-hero-1-1440x900.jpg')">
+      <div class="parallax__layer parallax__layer--base" style="background-image:url('../assets/images/sunset.jpg')">
         <div class="title">Goodbye....</div>
       </div>
     </div>
