--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -1,12 +1,12 @@
 <div class="parallax">
     <div id="group1" class="parallax__group">
       <div class="parallax__layer parallax__layer--base" style="background-image:url('https://www.crowdform.co.uk/wp-content/uploads/2016/04/tibor-hero-1-1440x900.jpg')">
-        <div class="title">HOME</div>
+        <div class="title">Company name and slogan will go here</div>
       </div>
     </div>
     <div id="group2" class="parallax__group">
       <div class="parallax__layer parallax__layer--base">
-        <div class="title">Tindubertagram combines a personal travel blog with the chance to connect with other travellers via social media. Share and record your pictures and blog about your travels and follow other travellers to get and share information.</div>
+        <div class="title">NAME TBC combines a personal travel blog with the chance to connect with other travellers. Record your pictures and blog about your travels. Follow other travellers to get and share information. Connect and share via social media.</div>
       </div>
       <div class="parallax__layer parallax__layer--back" style="background-image:url('https://www.crowdform.co.uk/wp-content/uploads/2016/05/anti-hero-1428x900.jpg')">
         <div class="title"></div>
@@ -14,10 +14,10 @@
     </div>
     <div id="group3" class="parallax__group">
       <div class="parallax__layer parallax__layer--base" style="background-image:url('https://www.crowdform.co.uk/wp-content/uploads/2016/05/crs-hero-1440x900.jpg')">
-        <div class="title">Create your own profile to share your photos and stories</div>
+        <div class="title">Create your own profile to share your photos and stories. Follow other travellers and share your experiences on social media</div>
       </div>
       <div class="parallax__layer parallax__layer--back">
-        <div class="title">Follow other travellers and share your experiences on social media</div>
+        <div class="title"></div>
       </div>
     </div>
     <div id="group4" class="parallax__group">
@@ -30,7 +30,7 @@
     </div>
     <div id="group5" class="parallax__group">
       <div class="parallax__layer parallax__layer--base" style="background-image:url('https://www.crowdform.co.uk/wp-content/uploads/2016/04/tibor-hero-1-1440x900.jpg')">
-        <div class="title">Goodbye....</div>
+        <div class="title">Goodbye....Thanks to our sponsors and put it in your back pocket.</div>
       </div>
     </div>
-  <footer>&copy; 2016. Website produced by OTN productions Ltd.</footer>
+  <footer>&copy; 2016. Website produced by OTN web development Ltd.</footer>
