--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -70,17 +70,20 @@ body {
   color: #fff;
   background-color: #3f729b;
   border-color: rgba(0,0,0,0.2);
-}
-button {
-  padding: 4px 6px 6px 6px;
-  margin: 10px auto 0;
-  border: none;
-  display: block;
+  margin-top: 20px;
 }
 .u-full-width {
   border: none;
   border-bottom: 1.5px #119DA4 solid;
 }
+
+
+#id {
+  padding: 20px;
+  text-align: center;
+  background-color: pink;
+}
+
 header {
   position: fixed;
   top:0;
@@ -396,16 +399,17 @@ main{
     @include flex-direction(column);
     form{
       position: center;
+      line-height: 35px;
 
       label {
-        width: 130px;
+        width: 160px;
       }
       input.u-full-width {
         width: 240px;
       }
     }
     .toggle-container{
-      margin: 50px 0;
+      margin: 35px 0;
     }
   }
 }
