--- a/public/templates/show.html
+++ b/public/templates/show.html
@@ -1,4 +1,5 @@
-<h1>SHOWING POST</h1>
+<div id="showPost">
 <h1>{{ showPost.post.title }}</h1>
 <h2><img src="{{ showPost.post.image }}" class="showImage"></h2>
 <p ng-bind-html="showPost.post.bodyText"></p>
+</div>
