--- a/public/templates/createPost.html
+++ b/public/templates/createPost.html
@@ -1,10 +1,11 @@
-<section ng-controller="UploadController as upload">
-  <form novalidate ng-submit="createPost.create()">
+<section class="card inputBox" ng-controller="UploadController as upload">
+  <h3>Add a new post...</h3>
+  <form ng-show="false" novalidate ng-submit="createPost.create()">
     <input type="text" placeholder="Title" ng-model="createPost.post.title">
     <input type="text" placeholder="Lat" ng-model="createPost.post.latlng.lat">
     <input type="text" placeholder="Lng" ng-model="createPost.post.latlng.lng">
     <drag-drop base64="createPost.post.base64" src="createPost.post.image"></drag-drop>
-    <div class='bodyTextInputBox' ta-toolbar="[['h1','h2','h3'],['bold','italics']]" text-angular ng-model="createPost.post.bodyText"></div>
+    <div class='bodyTextInputBox' ta-toolbar="[['h1','h2','h3']]" text-angular ng-model="createPost.post.bodyText"></div>
     <button>Submit</button>
   </form>
 </section>
