--- a/public/templates/home.html
+++ b/public/templates/home.html
@@ -1,7 +1,7 @@
 <div class="parallax">
   <div id="group1" class="parallax__group">
     <div class="parallax__layer parallax__layer--base" style="background-image:url('../assets/images/inlelakefisherman.jpg')">
-      <div class="title">HOME</div>
+      <img class="mainLogo" src="/assets/images/logo.svg" alt="" />
     </div>
   </div>
 
